# binaural-audio-editor

./: .gitignore  .travis.yml  CMakeLists.txt  CREDITS.txt  External-Orientation-Setup.md  LICENSE.txt  README.md
app_image_resources/: binaural-audio-editor.desktop  create-home-data-dir.sh
audio-device-recorder-helper/: .gitignore  CMakeLists.txt  audio-device-recorder.cpp
audio-device-recorder-helper/src/: audio-device-recorder.cpp  audio-device-recorder.h  audio-device-registry.cpp  audio-device-registry.h  main_app.cpp  main_app.h
build-mac/: build-mac.sh  build.sh
docs/: overview-of-systems.md
hardware-code/: bno055_abs_orientation.ino
hardware-code/bno055_abs_orientation/: bno055_abs_orientation.ino
include/: Change-HRTF-Dialog.h  CreateEAXReverbZoneDialog.h  CreateEchoZoneDialog.h  CreateReverbZoneDialog.h  CreateSoundProducerDialog.h  CreateStandardReverbZoneDialog.h  EditListenerDialog.h  EditMultipleEAXReverbZonesDialog.h  EditMultipleEchoZonesDialog.h  EditMultipleReverbZonesDialog.h  EditMultipleSoundProducersDialog.h  EditMultipleStandardReverbZonesDialog.h  EditorManipulator.h  HRTF-Test-Dialog.h  LoadSystem.h  RecordingStreamer.h  SaveData.h  SaveSystem.h  SimpleSerial.h  XMLCreator.h  XMLReader.h  audio-device-recorder.h  audio-device-registry.h  echo-zone.h  effect-zone.h  effects-manager.h  external-orientation-device-serial.h  lcc-output-dialog.h  listener-external.h  listener-track.h  listener.h  openalsoftaudioengine.h  osgViewerWX.h  reverb-zone.h  setup-serial-dialog.h  soundproducer-registry.h  soundproducer-track-manager.h  soundproducer-track.h  soundproducer.h
src/: Change-HRTF-Dialog.cpp  CreateEAXReverbZoneDialog.cpp  CreateEchoZoneDialog.cpp  CreateReverbZoneDialog.cpp  CreateSoundProducerDialog.cpp  CreateStandardReverbZoneDialog.cpp  EditListenerDialog.cpp  EditMultipleEAXReverbZonesDialog.cpp  EditMultipleEchoZonesDialog.cpp  EditMultipleReverbZonesDialog.cpp  EditMultipleSoundProducersDialog.cpp  EditMultipleStandardReverbZonesDialog.cpp  EditorManipulator.cpp  HRTF-Test-Dialog.cpp  LoadSystem.cpp  RecordingStreamer.cpp  SaveData.cpp  SaveSystem.cpp  XMLCreator.cpp  XMLReader.cpp  audio-device-recorder.cpp  audio-device-registry.cpp  echo-zone.cpp  effect-zone.cpp  effects-manager.cpp  external-orientation-device-serial.cpp  lcc-output-dialog.cpp  lcc-output-manager.cpp  lcc-output-manager.h  listener-external.cpp  listener-track.cpp  listener.cpp  openalsoftaudioengine.cpp  osgViewerWX.cpp  reverb-zone.cpp  setup-serial-dialog.cpp  soundproducer-registry.cpp  soundproducer-track-manager.cpp  soundproducer-track.cpp  soundproducer.cpp
src/timeline-track-editor/: parameters.h
src/timeline-track-editor/include/: audio-graph.h  audio-stream-container.h  audio-track.h  double-track.h  editor-graph.h  mono-audio-track.h  openalsoft-player.h  parameters.h  playback-controls.h  stereo-audio-track.h  timeline-frame.h  timeline-track-editor.h  timeline-window.h  track.h
src/timeline-track-editor/resources/: read-this.txt
src/timeline-track-editor/src/: audio-graph.cpp  audio-stream-container.cpp  audio-track.cpp  double-track.cpp  editor-graph.cpp  mono-audio-track.cpp  openalsoft-player.cpp  playback-controls.cpp  stereo-audio-track.cpp  timeline-frame.cpp  timeline-track-editor.cpp  timeline-window.cpp  track.cpp
